Automated bug-fix attempts
Squashes the generic automated-attempt commits from PR #2092 while preserving the final tree:

- 755947a6c8 automated attempts

- c9379ea6ea automated attempts

- e68d1f1c25 automated attempts

- ab6e615889 automated attempts

- 3e5b93f6fa automated attempts

- 6259c1b3d5 automated attempts

- 16a11bc53b automated attempts

- b7dd267054 automated attempts

Signed-off-by: Ben Heerema <ben@maplecreekmedical.ca>